Fix splitPane not behaving properly after closing and opening contacts list